[package]
name = "recent-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
windows-key-listener = "0.2.0"
rdev = { git = "https://github.com/fufesou/rdev" }
tokio = { version = "1.47.0", features = ["full"] }
winit = "0.30.11"
windows = { version = "0.61.3", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics",
    "Win32_Graphics_Dwm",
] }
windows-result = "0.3.4"
